<resources>
    <string name="app_name">AllerGenius</string>
    <string name="scan_barcode">Scan Barcode</string>

    <string name="product_id">Product ID</string>
    <string name="display_id">Display ID</string>

    <string name="your_food_score">Your Food Score</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition">Nutrition</string>
    <string name="allergens">Allergens</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="of_which_saturates">of which Saturates</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="of_which_sugars">of which Sugars</string>
    <string name="per_100g">Per 100g</string>
    <string name="nutritional_values">Nutritional Values</string>

    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>

    <string name="allergies">Allergies</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="add_allergies">Add Allergies…</string>
    <string name="allergy_text_hint">Allergies separated by a comma</string>
    <string name="add">Add</string>
    <string name="customise">Customise</string>
    <string name="ok">OK</string>

    <string name="allergiesTitle"><u>Allergies</u></string>
    <string name="traffic_light_scheme_title"><u>Traffic Light Scheme</u></string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="diary">Diary</string>
    <string name="symptoms">Symptoms</string>
    <string name="foods">Foods</string>
    <string name="symptom">Symptom</string>
    <string name="food">Food</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="symptoms_error">No symptoms found for this date.</string>
    <string name="submit">Submit</string>
    <string name="add_food">Add Food</string>
    <string name="date">Date</string>
    <string name="food_item">Food Item</string>
    <string name="traces">Traces</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Barcode</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="ar">AR</string>
    <string name="product_name">Product Name</string>
    <string name="barcode_id">Barcode ID</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="scan">Scan</string>
    <string name="x">X</string>
    <string name="help">\?</string>
    <string name="clear">x</string>
    <string name="nutritional_values_title"><u>Nutritional Values</u></string>
    <string name="bold_fat"><b>Fat</b></string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="bold_saturates"><b>Saturates</b></string>
    <string name="bold_sugar"><b>Sugar</b></string>
    <string name="bold_salt"><b>Salt</b></string>
    <string name="allergenius_warning">Avoid using this application solely if you suffer from life threatening allergic conditions such as Anaphylaxis.</string>
    <string name="traffic_help">Tap the circle of each food score to change the colour of the circle surrounding them.</string>
    <string name="nutritional_help">Adjust the sliders of each nutritional value to set the low and high values to suit your needs.</string>
    <string name="allergies_help">Set the colour used to highlight allergens and whether they should be underline, italic and/or bold. A preview can be seen of allergens in ingredients.</string>
    <string name="scanner_instruction">Hover over barcode</string>
    <string name="multi_barcode_error">Please scan 1 barcode at a time</string>
    <string name="diary_title"><u>Diary</u></string>
    <string name="day_example">22</string>
    <string name="diary_help">Set the colours to be used to represent food and symptom entries on days of the calendar within your diary.</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="network_connection_error">Network Connection Error</string>

</resources>