<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/menu_home"
            android:checked="true" />

        <item
            android:id="@+id/nav_allergies"
            android:icon="@drawable/ic_baseline_wysiwyg_24"
            android:title="@string/allergies" />

        <item
            android:id="@+id/nav_customise"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/customise" />

        <item
            android:id="@+id/nav_foods_eaten"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/diary" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_logout" />

    </group>
</menu>