<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dayLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingVertical="10dp" >

    <TextView
        android:id="@+id/monText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tueText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/wedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/thurText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/friText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/satText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sunText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>
