<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddAllergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/add_allergies"
        android:textColor="@color/dark_purple" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/allergyTextLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/purple_500"
        app:hintTextColor="@color/purple_500"
        android:visibility="gone" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAllergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/allergy_text_hint"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:backgroundTint="@color/dark_purple"
        android:textColor="@color/peach"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allergyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>

